tests/paczka1/fuzzy1/19517390.err
Error in line 1: wHcbDUPZX S36 74,0
Error in line 6: jWM8 S300 17,3
Error in line 14: A743 S36 30,2
Error in line 13: jWM8 S36 23,0
Error in line 22: wHcbDUPZX A743 6,4
Error in line 26: wHcbDUPZX S300 41,5
Error in line 27: wHcbDUPZX A743 0,9
Error in line 28: wHcbDUPZX S36 1,0
Error in line 29: wHcbDUPZX A95 77,6
Error in line 30: A743 A743 66,8
Error in line 23: jWM8 S36 70,5
Error in line 37: jWM8 A95 90,5
Error in line 38: jWM8 S36 34,4
